--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.textconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.textconditionalformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatData:interface'
-    summary: <span data-ttu-id="19c34-101">描述通过调用返回的数据的接口`textConditionalFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="19c34-101">An interface describing the data returned by calling `textConditionalFormat.toJSON()`</span></span><!-- --><span data-ttu-id="19c34-102">.</span><span class="sxs-lookup"><span data-stu-id="19c34-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`textConditionalFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.TextConditionalFormatData
     fullName: Excel.Interfaces.TextConditionalFormatData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.TextConditionalFormatData#rule:member'
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatData#format:member'
     summary: |-
-      <span data-ttu-id="19c34-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="19c34-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span> <span data-ttu-id="19c34-104">只读。</span><span class="sxs-lookup"><span data-stu-id="19c34-104">Read-only.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="19c34-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c34-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatData:interface'
   - uid: 'excel!Excel.Interfaces.TextConditionalFormatData#rule:member'
     summary: |-
-      <span data-ttu-id="19c34-106">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="19c34-106">The rule of the conditional format.</span></span>
+      条件格式的规则。
 
-      <span data-ttu-id="19c34-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c34-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
