--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartdatalabel.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartdatalabel.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartDataLabel:class'
     summary: |-
-      <span data-ttu-id="8bf7d-101">表示图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-101">Represents the data label of a chart point.</span></span>
+      表示图表点的数据标签。
 
-      <span data-ttu-id="8bf7d-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartDataLabel
     fullName: Excel.ChartDataLabel
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartDataLabel#context:member'
@@ -30,7 +30,7 @@ items:
       - 'excel!Excel.ChartDataLabel#showValue:member'
       - 'excel!Excel.ChartDataLabel#toJSON:member(1)'
   - uid: 'excel!Excel.ChartDataLabel#context:member'
-    summary: <span data-ttu-id="8bf7d-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-103">The request context associated with the object.</span></span> <span data-ttu-id="8bf7d-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -42,7 +42,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartDataLabel#load:member(1)'
-    summary: <span data-ttu-id="8bf7d-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8bf7d-106">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-106">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -56,11 +56,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="8bf7d-107">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-107">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartDataLabelLoadOptions:interface'
   - uid: 'excel!Excel.ChartDataLabel#load:member(2)'
-    summary: <span data-ttu-id="8bf7d-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8bf7d-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -74,11 +74,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="8bf7d-110">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-110">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartDataLabel#load:member(3)'
-    summary: <span data-ttu-id="8bf7d-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="8bf7d-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -96,7 +96,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="8bf7d-113">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-113">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -105,9 +105,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartDataLabel#position:member'
     summary: |-
-      <span data-ttu-id="8bf7d-114">表示数据标签的位置的 DataLabelPosition 值。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-114">DataLabelPosition value that represents the position of the data label.</span></span> <span data-ttu-id="8bf7d-115">有关详细信息，请参阅 ChartDataLabelPosition。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-115">See Excel.ChartDataLabelPosition for details.</span></span>
+      表示数据标签的位置的 DataLabelPosition 值。 有关详细信息，请参阅 ChartDataLabelPosition。
 
-      <span data-ttu-id="8bf7d-116">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-116">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -120,9 +120,9 @@ items:
           - 'excel!Excel.ChartDataLabel#position~0:complex'
   - uid: 'excel!Excel.ChartDataLabel#separator:member'
     summary: |-
-      <span data-ttu-id="8bf7d-117">该字符串表示用于图表中数据标签的分隔符。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-117">String representing the separator used for the data label on a chart.</span></span>
+      该字符串表示用于图表中数据标签的分隔符。
 
-      <span data-ttu-id="8bf7d-118">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-118">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: separator
     fullName: separator
     langs:
@@ -134,9 +134,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartDataLabel#set:member(1)'
-    summary: '<span data-ttu-id="8bf7d-119">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-119">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="8bf7d-120">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-120">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="8bf7d-121">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="8bf7d-121">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartDataLabel): void`
     name: 'set(properties, options)'
@@ -152,15 +152,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="8bf7d-122">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-122">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartDataLabelUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="8bf7d-123">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-123">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartDataLabel#set:member(2)'
-    summary: '<span data-ttu-id="8bf7d-124">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-124">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -179,9 +179,9 @@ items:
             - 'excel!Excel.ChartDataLabel:class'
   - uid: 'excel!Excel.ChartDataLabel#showBubbleSize:member'
     summary: |-
-      <span data-ttu-id="8bf7d-125">该布尔值表示数据标签气泡大小是否可见。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-125">Boolean value representing if the data label bubble size is visible or not.</span></span>
+      指定数据标签气泡大小是否可见。
 
-      <span data-ttu-id="8bf7d-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showBubbleSize
     fullName: showBubbleSize
     langs:
@@ -194,9 +194,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showCategoryName:member'
     summary: |-
-      <span data-ttu-id="8bf7d-127">表示数据标签分类名称是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-127">Boolean value representing if the data label category name is visible or not.</span></span>
+      指定数据标签类别名称是否可见。
 
-      <span data-ttu-id="8bf7d-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showCategoryName
     fullName: showCategoryName
     langs:
@@ -209,9 +209,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showLegendKey:member'
     summary: |-
-      <span data-ttu-id="8bf7d-129">该布尔值表示数据标签图例标示是否可见。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-129">Boolean value representing if the data label legend key is visible or not.</span></span>
+      指定数据标签图例标示是否可见。
 
-      <span data-ttu-id="8bf7d-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendKey
     fullName: showLegendKey
     langs:
@@ -224,9 +224,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showPercentage:member'
     summary: |-
-      <span data-ttu-id="8bf7d-131">该布尔值表示数据标签百分比是否可见。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-131">Boolean value representing if the data label percentage is visible or not.</span></span>
+      指定数据标签百分比是否可见。
 
-      <span data-ttu-id="8bf7d-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showPercentage
     fullName: showPercentage
     langs:
@@ -239,9 +239,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showSeriesName:member'
     summary: |-
-      <span data-ttu-id="8bf7d-133">该布尔值表示数据标签系列名称是否可见。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-133">Boolean value representing if the data label series name is visible or not.</span></span>
+      指定数据标签系列名称是否可见。
 
-      <span data-ttu-id="8bf7d-134">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-134">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showSeriesName
     fullName: showSeriesName
     langs:
@@ -254,9 +254,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#showValue:member'
     summary: |-
-      <span data-ttu-id="8bf7d-135">该布尔值表示数据标签值是否可见。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-135">Boolean value representing if the data label value is visible or not.</span></span>
+      指定数据标签值是否可见。
 
-      <span data-ttu-id="8bf7d-136">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8bf7d-136">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValue
     fullName: showValue
     langs:
@@ -268,7 +268,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartDataLabel#toJSON:member(1)'
-    summary: '<span data-ttu-id="8bf7d-137">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="8bf7d-137">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="8bf7d-138">.</span><span class="sxs-lookup"><span data-stu-id="8bf7d-138"></span></span> <span data-ttu-id="8bf7d-139">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="8bf7d-139"></span></span><!-- --><span data-ttu-id="8bf7d-140">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartDataLabel 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartDataLabelData`</span><span class="sxs-lookup"><span data-stu-id="8bf7d-140">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartDataLabel object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartDataLabelData`</span></span><!-- --><span data-ttu-id="8bf7d-141">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="8bf7d-141">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartDataLabel 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartDataLabelData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -281,7 +281,7 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -300,7 +300,7 @@ references:
         fullName: ' | "Invalid" | "None" | "Center" | "InsideEnd" | "InsideBase" | "OutsideEnd" | "Left" | "Right" | "Top" | "Bottom" | "BestFit" | "Callout"'
   - uid: 'excel!Excel.Interfaces.ChartDataLabelUpdateData:interface'
     name: Interfaces.ChartDataLabelUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartDataLabelData:interface'
     name: Excel.Interfaces.ChartDataLabelData
