--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData:interface'
-    summary: <span data-ttu-id="c59da-101">描述通过调用返回的数据的接口`dataPivotHierarchy.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="c59da-101">An interface describing the data returned by calling `dataPivotHierarchy.toJSON()`</span></span><!-- --><span data-ttu-id="c59da-102">.</span><span class="sxs-lookup"><span data-stu-id="c59da-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`dataPivotHierarchy.toJSON()`<!-- -->.
     name: Excel.Interfaces.DataPivotHierarchyData
     fullName: Excel.Interfaces.DataPivotHierarchyData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#field:member'
     summary: |-
-      <span data-ttu-id="c59da-103">返回与 DataPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="c59da-103">Returns the PivotFields associated with the DataPivotHierarchy.</span></span>
+      返回与 DataPivotHierarchy 相关联的 PivotFields。
 
-      <span data-ttu-id="c59da-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: field
     fullName: field
     langs:
@@ -33,9 +33,9 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldData:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#id:member'
     summary: |-
-      <span data-ttu-id="c59da-105">DataPivotHierarchy ID。</span><span class="sxs-lookup"><span data-stu-id="c59da-105">Id of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy ID。
 
-      <span data-ttu-id="c59da-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -48,9 +48,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#name:member'
     summary: |-
-      <span data-ttu-id="c59da-107">DataPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="c59da-107">Name of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的名称。
 
-      <span data-ttu-id="c59da-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -63,9 +63,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="c59da-109">DataPivotHierarchy 的数字格式。</span><span class="sxs-lookup"><span data-stu-id="c59da-109">Number format of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的数字格式。
 
-      <span data-ttu-id="c59da-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -78,9 +78,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#position:member'
     summary: |-
-      <span data-ttu-id="c59da-111">DataPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="c59da-111">Position of the DataPivotHierarchy.</span></span>
+      DataPivotHierarchy 的位置。
 
-      <span data-ttu-id="c59da-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -93,9 +93,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#showAs:member'
     summary: |-
-      <span data-ttu-id="c59da-113">确定数据是否应显示为特定计算汇总。</span><span class="sxs-lookup"><span data-stu-id="c59da-113">Determines whether the data should be shown as a specific summary calculation or not.</span></span>
+      指定是否应将数据显示为特定的汇总计算。
 
-      <span data-ttu-id="c59da-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAs
     fullName: showAs
     langs:
@@ -108,9 +108,9 @@ items:
           - 'excel!Excel.ShowAsRule:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member'
     summary: |-
-      <span data-ttu-id="c59da-115">确定是否显示 DataPivotHierarchy 的所有项。</span><span class="sxs-lookup"><span data-stu-id="c59da-115">Determines whether to show all items of the DataPivotHierarchy.</span></span>
+      指定是否显示 DataPivotHierarchy 的所有项目。
 
-      <span data-ttu-id="c59da-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c59da-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: summarizeBy
     fullName: summarizeBy
     langs:
